--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,9 @@
+body {
+  background-color: #333;
+}
+
 canvas {
   display: block;
   margin: 70px auto;
-  border: 1px solid red;
+  background-color: #fff;
 }
