--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #333;
+  background-color: #f2f2f2;
 }
 
 canvas {
   display: block;
   margin: 70px auto;
-  background-color: #fff;
+  background-color: #333;
 }
